--- a/BostonAssignment.ipynb
+++ b/BostonAssignment.ipynb
@@ -1306,7 +1306,7 @@
    },
    "source": [
     "I have changed the alpha values such as\n",
-    "alpha = 0.1, 10 , 0.01 to observe the difference and noticed that there is not much difference in the error rate. "
+    "alpha = 0.1, 10 , 0.01 to optimize the chosen regressor (Ridge) and noticed that there is not much difference . "
    ]
   },
   {
